--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                <div class="row d_flex">
                   <div class=" col-md-2 col-sm-3">
                      <div class="logo">
-                        <a href="index.html">Agro<span>Pro</span></a>
+                        <a href="index.html">ASM<span> AgroFarms</span></a>
                      </div>
                   </div>
                   <div class="col-md-8 col-sm-9">
@@ -51,9 +51,8 @@
                            <ul>
                               <li><a class="active" href="index.html">Home</a></li>
                               <li><a href="about.html">About</a></li>
-                              <li><a href="service.html">Service</a></li>
-                               <li><a href="Javascript:void(0)">Projects</a></li>
-                                <li><a href="testimonail.html">Testimonail</a></li>
+                              <!-- <li><a href="service.html">Service</a></li> -->
+                              <li><a href="gallery.html">Gallery</a></li>
                               <li><a href="blog.html">Blog</a></li>
                               <li><a href="contact.html">Contact</a></li>
                            </ul>
@@ -65,11 +64,11 @@
                   </div>
                   <div class="col-md-2 padd_0 d_none">
                      <ul class="email text_align_right">
-                        <li><a href="Javascript:void(0)">Login</a>
+                        <!-- <li><a href="Javascript:void(0)">Login</a>
                         </li>
                         <li><a href="Javascript:void(0)"><i class="fa fa-search" aria-hidden="true"></i>
                            </a>
-                        </li>
+                        </li> -->
                      </ul>
                   </div>
                </div>
@@ -134,7 +133,7 @@
                               <div class="row">
                                  <div class="col-md-12">
                                     <div class="willom">
-                                      <h1> Agriculture Fram</h1>
+                                      <h1> ASM AgroFarms</h1>
                                     </div>
                                  </div>
                               </div>
@@ -485,7 +484,8 @@
             </div>
          </div>
           <div class="map-responsive">
-            <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&amp;q=Eiffel+Tower+Paris+France" width="600" height="430" frameborder="0" style="border:0; width: 100%;" allowfullscreen=""></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7891.2823136410725!2d78.0934934414283!3d8.534174646968225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b038e2458ffe087%3A0x499ecbeaea858cc!2sAdaikalapuram%2C%20Tamil%20Nadu%2C%20India!5e0!3m2!1sen!2slu!4v1666285190550!5m2!1sen!2slu" width="600" height="430" style="border:0; width: 100%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
          </div>
       </div>
       <!-- end contact -->
@@ -531,10 +531,10 @@
                               <h3>ContacT</h3>
                               <ul class="top_infomation">
                                  <li><i class="fa fa-phone" aria-hidden="true"></i>
-                                    +01 1234567892
+                                    +91 98840 49749
                                  </li>
                                  <li><i class="fa fa-envelope" aria-hidden="true"></i>
-                                    <a href="Javascript:void(0)">demo@gmail.com</a>
+                                    <a href="Javascript:void(0)">snarayanamoorthy86@gmail.com</a>
                                  </li>
                               </ul>
                            </div>
@@ -546,7 +546,7 @@
                <div class="container">
                   <div class="row d_flex">
                      <div class="col-md-8">
-                        <p>© 2022 All Rights Reserved. Design by <a href="https://html.design/"> Free html Templates</a></p>
+                        <p>© 2022 All Rights Reserved. Design by  Navin</a></p>
                      </div>
                      <div class="col-md-4">
                            <ul class="social_icon ">
